@startuml
class User {
  +id: int
  +email: string
  +password_hash: string
  +role: enum
}
class Patient {
  +user_id: int
  +birthdate: date
  +medical_history: text
}
class Doctor {
  +user_id: int
  +speciality: string
  +license_number: string
}
class Appointment {
  +id: int
  +patient_id: int
  +doctor_id: int
  +start_time: datetime
  +status: string
}
User <|-- Patient
User <|-- Doctor
Appointment --> Patient
Appointment --> Doctor
@enduml
